// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xliff select extra unit information Make sure that after select, each file has the project id set correctly with xliff v1 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<xliff version="1.0">
  <file original="app1" source-language="en-KR" target-language="en-US" product-name="app1">
    <body>
      <trans-unit id="app1_1" resname="String 1a" restype="string" datatype="cpp" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1a</source>
        <target>app1:String 1a</target>
      </trans-unit>
      <trans-unit id="app1_2" resname="String 1b" restype="string" datatype="cpp" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1b</source>
        <target>app1:String 1b</target>
      </trans-unit>
      <trans-unit id="app1_3" resname="String 1c" restype="string" datatype="x-json" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1c</source>
        <target>app1:String 1c</target>
      </trans-unit>
    </body>
  </file>
  <file original="app2" source-language="en-KR" target-language="en-US" product-name="app1">
    <body>
      <trans-unit id="app2_1" resname="String 2a" restype="string" datatype="javascript" x-original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <source>app2: String 2a</source>
        <target>app2: String 2a</target>
      </trans-unit>
      <trans-unit id="app2_2" resname="String 2b" restype="string" datatype="javascript" x-original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <source>app2: String 2b</source>
        <target>app2: String 2b</target>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`xliff select extra unit information Make sure that after select, each file has the project id set correctly with xliff v2 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<xliff version="2.0" srcLang="en-KR" trgLang="en-US" xmlns:l="http://ilib-js.com/loctool">
  <file original="app1" l:project="app1">
    <group id="group_1" name="cpp">
      <unit id="app1_1" name="String 1a" type="res:string" l:datatype="cpp" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1a</source>
          <target>app1:String 1a</target>
        </segment>
      </unit>
      <unit id="app1_2" name="String 1b" type="res:string" l:datatype="cpp" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1b</source>
          <target>app1:String 1b</target>
        </segment>
      </unit>
    </group>
    <group id="group_2" name="x-json">
      <unit id="app1_3" name="String 1c" type="res:string" l:datatype="x-json" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1c</source>
          <target>app1:String 1c</target>
        </segment>
      </unit>
    </group>
  </file>
  <file original="app2" l:project="app1">
    <group id="group_3" name="javascript">
      <unit id="app2_1" name="String 2a" type="res:string" l:datatype="javascript" l:original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <segment>
          <source>app2: String 2a</source>
          <target>app2: String 2a</target>
        </segment>
      </unit>
      <unit id="app2_2" name="String 2b" type="res:string" l:datatype="javascript" l:original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <segment>
          <source>app2: String 2b</source>
          <target>app2: String 2b</target>
        </segment>
      </unit>
    </group>
  </file>
</xliff>"
`;

exports[`xliff select extra unit information Make sure that after select, each unit has the extended attributes and each file has the project id set correctly with xliff v1 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<xliff version="1.0">
  <file original="app1" source-language="en-KR" target-language="en-US" product-name="app1">
    <body>
      <trans-unit id="app1_1" resname="String 1a" restype="string" datatype="cpp" x-foo="bar" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1a</source>
        <target>app1:String 1a</target>
      </trans-unit>
      <trans-unit id="app1_2" resname="String 1b" restype="string" datatype="cpp" x-foo="bar" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1b</source>
        <target>app1:String 1b</target>
      </trans-unit>
      <trans-unit id="app1_3" resname="String 1c" restype="string" datatype="x-json" x-foo="bar" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1c</source>
        <target>app1:String 1c</target>
      </trans-unit>
    </body>
  </file>
  <file original="app2" source-language="en-KR" target-language="en-US" product-name="app1">
    <body>
      <trans-unit id="app2_1" resname="String 2a" restype="string" datatype="javascript" x-foo="bar" x-original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <source>app2: String 2a</source>
        <target>app2: String 2a</target>
      </trans-unit>
      <trans-unit id="app2_2" resname="String 2b" restype="string" datatype="javascript" x-foo="bar" x-original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <source>app2: String 2b</source>
        <target>app2: String 2b</target>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`xliff select extra unit information Make sure that after select, each unit has the extended attributes and each file has the project id set correctly with xliff v2 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<xliff version="2.0" srcLang="en-KR" trgLang="en-US" xmlns:l="http://ilib-js.com/loctool">
  <file original="app1" l:project="app1">
    <group id="group_1" name="cpp">
      <unit id="app1_1" name="String 1a" type="res:string" l:datatype="cpp" l:foo="bar" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1a</source>
          <target>app1:String 1a</target>
        </segment>
      </unit>
      <unit id="app1_2" name="String 1b" type="res:string" l:datatype="cpp" l:foo="bar" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1b</source>
          <target>app1:String 1b</target>
        </segment>
      </unit>
    </group>
    <group id="group_2" name="x-json">
      <unit id="app1_3" name="String 1c" type="res:string" l:datatype="x-json" l:foo="bar" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1c</source>
          <target>app1:String 1c</target>
        </segment>
      </unit>
    </group>
  </file>
  <file original="app2" l:project="app1">
    <group id="group_3" name="javascript">
      <unit id="app2_1" name="String 2a" type="res:string" l:datatype="javascript" l:foo="bar" l:original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <segment>
          <source>app2: String 2a</source>
          <target>app2: String 2a</target>
        </segment>
      </unit>
      <unit id="app2_2" name="String 2b" type="res:string" l:datatype="javascript" l:foo="bar" l:original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <segment>
          <source>app2: String 2b</source>
          <target>app2: String 2b</target>
        </segment>
      </unit>
    </group>
  </file>
</xliff>"
`;

exports[`xliff select extra unit information Make sure that after select, each unit has the extended attributes set correctly with xliff v1 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<xliff version="1.0">
  <file original="app1" source-language="en-KR" target-language="en-US" product-name="app1">
    <body>
      <trans-unit id="app1_1" resname="String 1a" restype="string" datatype="cpp" x-foo="bar" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1a</source>
        <target>app1:String 1a</target>
      </trans-unit>
      <trans-unit id="app1_2" resname="String 1b" restype="string" datatype="cpp" x-foo="bar" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1b</source>
        <target>app1:String 1b</target>
      </trans-unit>
      <trans-unit id="app1_3" resname="String 1c" restype="string" datatype="x-json" x-foo="bar" x-original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <source>app1:String 1c</source>
        <target>app1:String 1c</target>
      </trans-unit>
    </body>
  </file>
  <file original="app2" source-language="en-KR" target-language="en-US" product-name="app2">
    <body>
      <trans-unit id="app2_1" resname="String 2a" restype="string" datatype="javascript" x-foo="bar" x-original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <source>app2: String 2a</source>
        <target>app2: String 2a</target>
      </trans-unit>
      <trans-unit id="app2_2" resname="String 2b" restype="string" datatype="javascript" x-foo="bar" x-original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <source>app2: String 2b</source>
        <target>app2: String 2b</target>
      </trans-unit>
    </body>
  </file>
</xliff>"
`;

exports[`xliff select extra unit information Make sure that after select, each unit has the extended attributes set correctly with xliff v2 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<xliff version="2.0" srcLang="en-KR" trgLang="en-US" xmlns:l="http://ilib-js.com/loctool">
  <file original="app1" l:project="app1">
    <group id="group_1" name="cpp">
      <unit id="app1_1" name="String 1a" type="res:string" l:datatype="cpp" l:foo="bar" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1a</source>
          <target>app1:String 1a</target>
        </segment>
      </unit>
      <unit id="app1_2" name="String 1b" type="res:string" l:datatype="cpp" l:foo="bar" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1b</source>
          <target>app1:String 1b</target>
        </segment>
      </unit>
    </group>
    <group id="group_2" name="x-json">
      <unit id="app1_3" name="String 1c" type="res:string" l:datatype="x-json" l:foo="bar" l:original-file="test/testfiles/xliff20/app1/en-US.xliff">
        <segment>
          <source>app1:String 1c</source>
          <target>app1:String 1c</target>
        </segment>
      </unit>
    </group>
  </file>
  <file original="app2" l:project="app2">
    <group id="group_3" name="javascript">
      <unit id="app2_1" name="String 2a" type="res:string" l:datatype="javascript" l:foo="bar" l:original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <segment>
          <source>app2: String 2a</source>
          <target>app2: String 2a</target>
        </segment>
      </unit>
      <unit id="app2_2" name="String 2b" type="res:string" l:datatype="javascript" l:foo="bar" l:original-file="test/testfiles/xliff20/app2/en-US.xliff">
        <segment>
          <source>app2: String 2b</source>
          <target>app2: String 2b</target>
        </segment>
      </unit>
    </group>
  </file>
</xliff>"
`;
